# rails-api/config/routes.rb
@@ -27,10 +27,17 @@ Rails.application.routes.draw do
   devise_for :users,
              path: '',
              path_names: {
-               sign_in: 'login', sign_out: 'logout', registration: 'signup'
+               sign_in: 'login',
+               sign_out: 'logout',
+               registration: 'signup',
+               confirmation: 'confirmation',
+               password: 'password'
              },
              controllers: {
-               sessions: 'users/sessions', registrations: 'users/registrations'
+               sessions: 'users/sessions',
+               registrations: 'users/registrations',
+               confirmations: 'users/confirmations',
+               passwords: 'users/passwords'
              },
              defaults: { format: :json }
 end
